# Athena

./: .gitignore  .gitmodules  .swp  Cargo.toml  README.md  index.html  viz_range.py
.cargo/: config.toml
.github/workflows/: rust.yml
atlas/: Cargo.toml  index.html
atlas/benches/: benchmark.rs
atlas/src/: atom_shader.wgsl  camera.rs  debug_iso_2d.rs  egui_state.rs  gpu.rs  graph_3d_shader.rs  gui.rs  iso.rs  iso2.rs  iso3.rs  iso4.rs  iso_3d.rs  lib.rs  line.wgsl  main.rs  mpr.wgsl  pdb.rs  shader.wgsl  ui.rs  vm.rs
benches/: benchmark.rs
compiler/: Cargo.toml
compiler/benches/: benchmark.rs
compiler/src/: jit.rs  jit2.rs  lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
noctua/: Cargo.toml
noctua/src/: config.rs  expr.rs  expr2.rs  expr_old.rs  flat_deque.rs  fmt_style.rs  lib.rs  real.rs
noctua_macros/: Cargo.toml
noctua_macros/src/: lib.rs
src/: athena.rs  camera.rs  debug_iso_2d.rs  egui_state.rs  error.rs  eval.rs  gpu.rs  gui.rs  gui.wgsl  iso.rs  iso2.rs  iso3.rs  isosurface.rs  jit.rs  lib.rs  line.wgsl  main.rs  mpr.wgsl  parser.rs  shader.wgsl  ui.rs  vm.rs  wasm_bridge.rs  wgpu_utils.rs
symbols/: Cargo.toml
symbols/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
web/: index.html
