[workspace]
resolver = "3"

members = [
  "atlas", "macros", "compiler", "utils"
]

[workspace.dependencies]
atlas = { path = "./atlas" }
macros = { path = "./macros" }
utils = { path = "./utils" }
compiler = { path = "./compiler" }

log = "0.4.22"
env_logger = "0.11.6"
paste = "1.0.15"
rayon = "1.10.0"
rustc-hash = "2.1.1"
wide = "0.7.32"
rand = "0.9.1"

[profile.release]
debug=1
