[package]
name = "atlas"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["cdylib", "rlib"]
# # name = "atlas_lib"
# path = "src/lib.rs"

[dependencies]
macros = { workspace = true }
utils = { workspace = true }
compiler = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
wide = { workspace = true }
rand = { workspace = true }
facet = { workspace = true }
facet-reflect = { workspace = true }
facet-pretty.workspace = true

cfg-if = "1"
bytemuck = { version = "1.21.0", features = [ "derive" ] }
egui = { version = "0.30", feature = ["mint"] }
egui-wgpu = { version = "0.30" }
egui-winit = { version = "0.30", default-features = false, features = [ "links" ] }
egui_tiles = "0.11"
catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
pollster = "0.4.0"
wgpu = "23.0.1"
winit = { version = "0.30", features = ["rwh_05", "mint"] }
glam = { version = "0.29.2", features = ["bytemuck", "mint"] }
derive_setters = "0.1.6"
mint = "0.5.9"
quanta = "0.12.5"
transform-gizmo = "0.4.0"
regex = "1.11.1"
egui-probe = { version = "0.7.0", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display"] }
ordered-float = "4.6.0"
crossbeam = "0.8.4"



[target.'cfg(not(target_arch="wasm32"))'.dependencies]
egui-winit = { version = "0.30", default-features = false, features = [ "links", "clipboard", "wayland", "x11" ] }


# [target.'cfg(target_arch="wasm32")'.dependencies]
# console_error_panic_hook = "0.1.7"
# console_log = "1.0.0"
# wasm-bindgen = "0.2"
# web-sys = { version = "0.3", features = [
#   "Document",
#   "Window",
#   "Element",
# ]}
# wgpu = { version = "23.0.0", features = ["webgl"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false
path = "compiler/benches/benchmark.rs"
