[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { workspace = true }
utils = { workspace = true }

rayon = { workspace = true }
rustc-hash = { workspace = true }
paste = { workspace = true }
wide = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

cranelift-codegen = "0.119.0"
cranelift-frontend = "0.119.0"
cranelift-module = "0.119.0"
cranelift-jit = "0.119.0"
cranelift-native = "0.119.0"
target-lexicon = "0.13.2"
cranelift-entity = "0.119.0"
dynasm = "3.2.0"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false
path = "benches/benchmark.rs"

