[package]
name = "noctua"
version = "0.1.0"
edition = "2024"
authors = ["dlamei"]
description = "symbolic algebra library"
license = "MIT"


[dependencies]
bitflags = { workspace = true }
rustc-hash = { workspace = true }
itertools = { workspace = true }
# noctua_macros = { workspace = true, features = ["disable_log"]}
noctua_macros = { workspace = true}
log = { workspace = true }
env_logger = { workspace = true }
paste = { workspace = true }
once_cell = "1.21.3"
num = "0.4.3"
num-rational = "0.4.2"

